{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 148,
  "lineage": "00c6a0df-98f7-103f-ad20-8315ae814f81",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "ext",
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/forti-emea-se/global/networks/fgt-example-vpc-ext",
            "mtu": 0,
            "name": "fgt-example-vpc-ext",
            "project": "forti-emea-se",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-ext"
          }
        },
        {
          "index_key": "hasync",
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/forti-emea-se/global/networks/fgt-example-vpc-hasync",
            "mtu": 0,
            "name": "fgt-example-vpc-hasync",
            "project": "forti-emea-se",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-hasync"
          }
        },
        {
          "index_key": "int",
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/forti-emea-se/global/networks/fgt-example-vpc-int",
            "mtu": 0,
            "name": "fgt-example-vpc-int",
            "project": "forti-emea-se",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-int"
          }
        },
        {
          "index_key": "mgmt",
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/forti-emea-se/global/networks/fgt-example-vpc-mgmt",
            "mtu": 0,
            "name": "fgt-example-vpc-mgmt",
            "project": "forti-emea-se",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-mgmt"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "ext",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-30T01:56:25.651-08:00",
            "gateway_address": "172.20.0.1",
            "id": "projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-ext-euwest9",
            "ip_cidr_range": "172.20.0.0/24",
            "name": "fgt-example-sb-ext-euwest9",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-ext",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "forti-emea-se",
            "purpose": "PRIVATE",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-ext-euwest9",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.demo"
          ]
        },
        {
          "index_key": "hasync",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-30T01:56:25.649-08:00",
            "gateway_address": "172.20.2.1",
            "id": "projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-hasync-euwest9",
            "ip_cidr_range": "172.20.2.0/24",
            "name": "fgt-example-sb-hasync-euwest9",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-hasync",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "forti-emea-se",
            "purpose": "PRIVATE",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-hasync-euwest9",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.demo"
          ]
        },
        {
          "index_key": "int",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-30T01:56:25.657-08:00",
            "gateway_address": "172.20.1.1",
            "id": "projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-int-euwest9",
            "ip_cidr_range": "172.20.1.0/24",
            "name": "fgt-example-sb-int-euwest9",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-int",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "forti-emea-se",
            "purpose": "PRIVATE",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-int-euwest9",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.demo"
          ]
        },
        {
          "index_key": "mgmt",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-30T01:56:25.653-08:00",
            "gateway_address": "172.20.3.1",
            "id": "projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-mgmt-euwest9",
            "ip_cidr_range": "172.20.3.0/24",
            "name": "fgt-example-sb-mgmt-euwest9",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-mgmt",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "forti-emea-se",
            "purpose": "PRIVATE",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-mgmt-euwest9",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.demo"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "gateway_address": "172.20.0.1",
            "id": "projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-ext-euwest9",
            "ip_cidr_range": "172.20.0.0/24",
            "name": "fgt-example-sb-ext-euwest9",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-ext",
            "private_ip_google_access": false,
            "project": "forti-emea-se",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-ext-euwest9"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "gateway_address": "172.20.2.1",
            "id": "projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-hasync-euwest9",
            "ip_cidr_range": "172.20.2.0/24",
            "name": "fgt-example-sb-hasync-euwest9",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-hasync",
            "private_ip_google_access": false,
            "project": "forti-emea-se",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-hasync-euwest9"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "gateway_address": "172.20.1.1",
            "id": "projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-int-euwest9",
            "ip_cidr_range": "172.20.1.0/24",
            "name": "fgt-example-sb-int-euwest9",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-int",
            "private_ip_google_access": false,
            "project": "forti-emea-se",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-int-euwest9"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "gateway_address": "172.20.3.1",
            "id": "projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-mgmt-euwest9",
            "ip_cidr_range": "172.20.3.0/24",
            "name": "fgt-example-sb-mgmt-euwest9",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-mgmt",
            "private_ip_google_access": false,
            "project": "forti-emea-se",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-mgmt-euwest9"
          }
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ext_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.0.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-01-30T01:56:48.564-08:00",
            "id": "projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip1-ext-euwest9",
            "name": "fgt-example-paygip1-ext-euwest9",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip1-ext-euwest9",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-ext-euwest9"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_subnetwork.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.0.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-01-30T01:56:59.161-08:00",
            "id": "projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip2-ext-euwest9",
            "name": "fgt-example-paygip2-ext-euwest9",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip2-ext-euwest9",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-ext-euwest9"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "frontends",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "app1",
          "schema_version": 0,
          "attributes": {
            "address": "34.163.254.179",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-30T01:56:47.766-08:00",
            "id": "projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygeip-app1",
            "name": "fgt-example-paygeip-app1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygeip-app1"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "hasync_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.1.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-01-30T01:56:59.261-08:00",
            "id": "projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip1-hasync-euwest9",
            "name": "fgt-example-paygip1-hasync-euwest9",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip1-hasync-euwest9",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-int-euwest9"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_subnetwork.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.1.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-01-30T01:56:59.568-08:00",
            "id": "projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip2-hasync-euwest9",
            "name": "fgt-example-paygip2-hasync-euwest9",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip2-hasync-euwest9",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-int-euwest9"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ilb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "172.20.2.4",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-01-30T01:56:48.058-08:00",
            "id": "projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip-ilb-euwest9",
            "name": "fgt-example-paygip-ilb-euwest9",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip-ilb-euwest9",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-hasync-euwest9"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "int_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.2.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-01-30T01:56:48.073-08:00",
            "id": "projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip1-int-euwest9",
            "name": "fgt-example-paygip1-int-euwest9",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip1-int-euwest9",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-hasync-euwest9"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_subnetwork.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.2.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-01-30T01:56:48.061-08:00",
            "id": "projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip2-int-euwest9",
            "name": "fgt-example-paygip2-int-euwest9",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip2-int-euwest9",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-hasync-euwest9"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "mgmt_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.3.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-01-30T01:56:59.868-08:00",
            "id": "projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip1-mgmt-euwest9",
            "name": "fgt-example-paygip1-mgmt-euwest9",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip1-mgmt-euwest9",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-mgmt-euwest9"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_subnetwork.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "172.20.3.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-01-30T01:56:59.561-08:00",
            "id": "projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip2-mgmt-euwest9",
            "name": "fgt-example-paygip2-mgmt-euwest9",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygip2-mgmt-euwest9",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-mgmt-euwest9"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "mgmt_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.155.144.24",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-30T01:56:47.651-08:00",
            "id": "projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygeip1-mgmt-euwest9",
            "name": "fgt-example-paygeip1-mgmt-euwest9",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygeip1-mgmt-euwest9"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "34.155.178.193",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-01-30T01:56:47.756-08:00",
            "id": "projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygeip2-mgmt-euwest9",
            "name": "fgt-example-paygeip2-mgmt-euwest9",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "forti-emea-se",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygeip2-mgmt-euwest9"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-hasync",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-01-30T01:56:59.110-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/forti-emea-se/global/firewalls/fgt-example-paygfw-hasync-allow-fgt",
            "log_config": [],
            "name": "fgt-example-paygfw-hasync-allow-fgt",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-int",
            "priority": 1000,
            "project": "forti-emea-se",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/firewalls/fgt-example-paygfw-hasync-allow-fgt",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "fgt"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "fgt"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-01-30T01:56:59.569-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/forti-emea-se/global/firewalls/fgt-example-paygfw-mgmt-allow-admin",
            "log_config": [],
            "name": "fgt-example-paygfw-mgmt-allow-admin",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-mgmt",
            "priority": 1000,
            "project": "forti-emea-se",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/firewalls/fgt-example-paygfw-mgmt-allow-admin",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "fgt"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-port1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-01-30T01:56:58.915-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/forti-emea-se/global/firewalls/fgt-example-paygfw-ext-allowall",
            "log_config": [],
            "name": "fgt-example-paygfw-ext-allowall",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-ext",
            "priority": 1000,
            "project": "forti-emea-se",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/firewalls/fgt-example-paygfw-ext-allowall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-port2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-01-30T01:56:48.108-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/forti-emea-se/global/firewalls/fgt-example-paygfw-int-allowall",
            "log_config": [],
            "name": "fgt-example-paygfw-int-allowall",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-hasync",
            "priority": 1000,
            "project": "forti-emea-se",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/firewalls/fgt-example-paygfw-int-allowall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "frontends",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "app1",
          "schema_version": 0,
          "attributes": {
            "all_ports": true,
            "allow_global_access": false,
            "backend_service": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/backendServices/fgt-example-paygbes-elb-euwest9",
            "creation_timestamp": "2023-01-30T01:58:03.084-08:00",
            "id": "projects/forti-emea-se/regions/europe-west9/forwardingRules/fgt-example-paygfr-app1",
            "ip_address": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/addresses/fgt-example-paygeip-app1",
            "ip_protocol": "L3_DEFAULT",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fgt-example-paygfr-app1",
            "network_tier": "PREMIUM",
            "project": "forti-emea-se",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/forwardingRules/fgt-example-paygfr-app1"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_default_service_account.default",
            "module.fgt_ha.data.google_compute_image.fgt_image",
            "module.fgt_ha.data.google_compute_subnetwork.subnets",
            "module.fgt_ha.data.google_compute_zones.zones_in_region",
            "module.fgt_ha.google_compute_address.ext_priv",
            "module.fgt_ha.google_compute_address.frontends",
            "module.fgt_ha.google_compute_address.hasync_priv",
            "module.fgt_ha.google_compute_address.ilb",
            "module.fgt_ha.google_compute_address.int_priv",
            "module.fgt_ha.google_compute_address.mgmt_priv",
            "module.fgt_ha.google_compute_address.mgmt_pub",
            "module.fgt_ha.google_compute_disk.logdisk",
            "module.fgt_ha.google_compute_instance.fgt-vm",
            "module.fgt_ha.google_compute_instance_group.fgt-umigs",
            "module.fgt_ha.google_compute_region_backend_service.elb_bes",
            "module.fgt_ha.google_compute_region_health_check.health_check",
            "module.fgt_ha.random_string.api_key"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "ilb_fwd_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": true,
            "allow_global_access": true,
            "backend_service": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/backendServices/fgt-example-paygbes-ilb-euwest9",
            "creation_timestamp": "2023-01-30T01:58:03.386-08:00",
            "id": "projects/forti-emea-se/regions/europe-west9/forwardingRules/fgt-example-paygfwdrule-ilb-euwest9",
            "ip_address": "172.20.2.4",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL",
            "name": "fgt-example-paygfwdrule-ilb-euwest9",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-hasync",
            "network_tier": "PREMIUM",
            "project": "forti-emea-se",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/forwardingRules/fgt-example-paygfwdrule-ilb-euwest9",
            "subnetwork": "projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-hasync-euwest9"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_default_service_account.default",
            "module.fgt_ha.data.google_compute_image.fgt_image",
            "module.fgt_ha.data.google_compute_subnetwork.subnets",
            "module.fgt_ha.data.google_compute_zones.zones_in_region",
            "module.fgt_ha.google_compute_address.ext_priv",
            "module.fgt_ha.google_compute_address.frontends",
            "module.fgt_ha.google_compute_address.hasync_priv",
            "module.fgt_ha.google_compute_address.ilb",
            "module.fgt_ha.google_compute_address.int_priv",
            "module.fgt_ha.google_compute_address.mgmt_priv",
            "module.fgt_ha.google_compute_address.mgmt_pub",
            "module.fgt_ha.google_compute_disk.logdisk",
            "module.fgt_ha.google_compute_instance.fgt-vm",
            "module.fgt_ha.google_compute_instance_group.fgt-umigs",
            "module.fgt_ha.google_compute_region_backend_service.ilb_bes",
            "module.fgt_ha.google_compute_region_health_check.health_check",
            "module.fgt_ha.random_string.api_key"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "fgt-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/europe-west9-a/disks/fgt-example-paygdisk-logdisk1-euwest9-a"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fortigcp-project-001/global/images/fortinet-fgtondemand-723-20221110-001-w-license",
                    "labels": {
                      "env": "test",
                      "owner": "johndoe"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/europe-west9-a/disks/fgt-example-paygvm1-euwest9-a"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/forti-emea-se/zones/europe-west9-a/instances/fgt-example-paygvm1-euwest9-a",
            "instance_id": "7585798643265448600",
            "label_fingerprint": "x2pMgnpqPwU=",
            "labels": {
              "env": "test",
              "owner": "johndoe"
            },
            "machine_type": "e2-standard-4",
            "metadata": {
              "serial-port-enable": "true",
              "user-data": "config system global\n  set hostname fgt-example-paygvm-euwest9-a\nend\nconfig system probe-response\n    set mode http-probe\n    set http-probe-value OK\n    set port 8008\nend\nconfig system api-user\n  edit terraform\n    set api-key ZyT8VrsRadiEs1JY8LSd7Z0iq5j1I5\n    set accprofile \"prof_admin\"\n    config trusthost\n        end\n  next\nend\nconfig system sdn-connector\n    edit \"gcp\"\n        set type gcp\n        set ha-status enable\n    next\nend\nconfi [...]
            },
            "metadata_fingerprint": "Sl8nTHGG7Ng=",
            "name": "fgt-example-paygvm1-euwest9-a",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-ext",
                "network_ip": "172.20.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-ext-euwest9",
                "subnetwork_project": "forti-emea-se"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-hasync",
                "network_ip": "172.20.2.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-hasync-euwest9",
                "subnetwork_project": "forti-emea-se"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-int",
                "network_ip": "172.20.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-int-euwest9",
                "subnetwork_project": "forti-emea-se"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "34.155.144.24",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic3",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-mgmt",
                "network_ip": "172.20.3.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-mgmt-euwest9",
                "subnetwork_project": "forti-emea-se"
              }
            ],
            "project": "forti-emea-se",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/europe-west9-a/instances/fgt-example-paygvm1-euwest9-a",
            "service_account": [
              {
                "email": "193919212754-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "fgt"
            ],
            "tags_fingerprint": "xTla7NhEPGA=",
            "zone": "europe-west9-a"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_default_service_account.default",
            "module.fgt_ha.data.google_compute_image.fgt_image",
            "module.fgt_ha.data.google_compute_subnetwork.subnets",
            "module.fgt_ha.data.google_compute_zones.zones_in_region",
            "module.fgt_ha.google_compute_address.ext_priv",
            "module.fgt_ha.google_compute_address.frontends",
            "module.fgt_ha.google_compute_address.hasync_priv",
            "module.fgt_ha.google_compute_address.ilb",
            "module.fgt_ha.google_compute_address.int_priv",
            "module.fgt_ha.google_compute_address.mgmt_priv",
            "module.fgt_ha.google_compute_address.mgmt_pub",
            "module.fgt_ha.google_compute_disk.logdisk",
            "module.fgt_ha.random_string.api_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/europe-west9-b/disks/fgt-example-paygdisk-logdisk2-euwest9-b"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fortigcp-project-001/global/images/fortinet-fgtondemand-723-20221110-001-w-license",
                    "labels": {
                      "env": "test",
                      "owner": "johndoe"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/europe-west9-b/disks/fgt-example-paygvm2-euwest9-b"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/forti-emea-se/zones/europe-west9-b/instances/fgt-example-paygvm2-euwest9-b",
            "instance_id": "3394939391720434328",
            "label_fingerprint": "x2pMgnpqPwU=",
            "labels": {
              "env": "test",
              "owner": "johndoe"
            },
            "machine_type": "e2-standard-4",
            "metadata": {
              "serial-port-enable": "true",
              "user-data": "config system global\n  set hostname fgt-example-paygvm-euwest9-b\nend\nconfig system probe-response\n    set mode http-probe\n    set http-probe-value OK\n    set port 8008\nend\nconfig system api-user\n  edit terraform\n    set api-key ZyT8VrsRadiEs1JY8LSd7Z0iq5j1I5\n    set accprofile \"prof_admin\"\n    config trusthost\n        end\n  next\nend\nconfig system sdn-connector\n    edit \"gcp\"\n        set type gcp\n        set ha-status enable\n    next\nend\nconfi [...]
            },
            "metadata_fingerprint": "DZQDVR8u4J8=",
            "name": "fgt-example-paygvm2-euwest9-b",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-ext",
                "network_ip": "172.20.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-ext-euwest9",
                "subnetwork_project": "forti-emea-se"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-hasync",
                "network_ip": "172.20.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-hasync-euwest9",
                "subnetwork_project": "forti-emea-se"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-int",
                "network_ip": "172.20.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-int-euwest9",
                "subnetwork_project": "forti-emea-se"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "34.155.178.193",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic3",
                "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-mgmt",
                "network_ip": "172.20.3.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-mgmt-euwest9",
                "subnetwork_project": "forti-emea-se"
              }
            ],
            "project": "forti-emea-se",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/europe-west9-b/instances/fgt-example-paygvm2-euwest9-b",
            "service_account": [
              {
                "email": "193919212754-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "fgt"
            ],
            "tags_fingerprint": "xTla7NhEPGA=",
            "zone": "europe-west9-b"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_default_service_account.default",
            "module.fgt_ha.data.google_compute_image.fgt_image",
            "module.fgt_ha.data.google_compute_subnetwork.subnets",
            "module.fgt_ha.data.google_compute_zones.zones_in_region",
            "module.fgt_ha.google_compute_address.ext_priv",
            "module.fgt_ha.google_compute_address.frontends",
            "module.fgt_ha.google_compute_address.hasync_priv",
            "module.fgt_ha.google_compute_address.ilb",
            "module.fgt_ha.google_compute_address.int_priv",
            "module.fgt_ha.google_compute_address.mgmt_priv",
            "module.fgt_ha.google_compute_address.mgmt_pub",
            "module.fgt_ha.google_compute_disk.logdisk",
            "module.fgt_ha.random_string.api_key"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "elb_bes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/europe-west9-a/instanceGroups/fgt-example-paygumig0-euwest9-a",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/europe-west9-b/instanceGroups/fgt-example-paygumig1-euwest9-b",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "connection_tracking_policy": [
              {
                "connection_persistence_on_unhealthy_backends": "NEVER_PERSIST",
                "idle_timeout_sec": 60,
                "tracking_mode": "PER_CONNECTION"
              }
            ],
            "creation_timestamp": "2023-01-30T01:57:40.965-08:00",
            "enable_cdn": false,
            "fingerprint": "IpfmVBkCuf4=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/healthChecks/fgt-example-payghealthcheck-http8008-euwest9"
            ],
            "id": "projects/forti-emea-se/regions/europe-west9/backendServices/fgt-example-paygbes-elb-euwest9",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fgt-example-paygbes-elb-euwest9",
            "port_name": "http",
            "project": "forti-emea-se",
            "protocol": "UNSPECIFIED",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/backendServices/fgt-example-paygbes-elb-euwest9",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_default_service_account.default",
            "module.fgt_ha.data.google_compute_image.fgt_image",
            "module.fgt_ha.data.google_compute_subnetwork.subnets",
            "module.fgt_ha.data.google_compute_zones.zones_in_region",
            "module.fgt_ha.google_compute_address.ext_priv",
            "module.fgt_ha.google_compute_address.frontends",
            "module.fgt_ha.google_compute_address.hasync_priv",
            "module.fgt_ha.google_compute_address.ilb",
            "module.fgt_ha.google_compute_address.int_priv",
            "module.fgt_ha.google_compute_address.mgmt_priv",
            "module.fgt_ha.google_compute_address.mgmt_pub",
            "module.fgt_ha.google_compute_disk.logdisk",
            "module.fgt_ha.google_compute_instance.fgt-vm",
            "module.fgt_ha.google_compute_instance_group.fgt-umigs",
            "module.fgt_ha.google_compute_region_health_check.health_check",
            "module.fgt_ha.random_string.api_key"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "ilb_bes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/europe-west9-a/instanceGroups/fgt-example-paygumig0-euwest9-a",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/zones/europe-west9-b/instanceGroups/fgt-example-paygumig1-euwest9-b",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "connection_tracking_policy": [
              {
                "connection_persistence_on_unhealthy_backends": "NEVER_PERSIST",
                "idle_timeout_sec": 600,
                "tracking_mode": "PER_CONNECTION"
              }
            ],
            "creation_timestamp": "2023-01-30T01:57:40.967-08:00",
            "enable_cdn": false,
            "fingerprint": "qPGNlPWvp4o=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/healthChecks/fgt-example-payghealthcheck-http8008-euwest9"
            ],
            "id": "projects/forti-emea-se/regions/europe-west9/backendServices/fgt-example-paygbes-ilb-euwest9",
            "load_balancing_scheme": "INTERNAL",
            "name": "fgt-example-paygbes-ilb-euwest9",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-hasync",
            "project": "forti-emea-se",
            "protocol": "TCP",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/backendServices/fgt-example-paygbes-ilb-euwest9",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_default_service_account.default",
            "module.fgt_ha.data.google_compute_image.fgt_image",
            "module.fgt_ha.data.google_compute_subnetwork.subnets",
            "module.fgt_ha.data.google_compute_zones.zones_in_region",
            "module.fgt_ha.google_compute_address.ext_priv",
            "module.fgt_ha.google_compute_address.frontends",
            "module.fgt_ha.google_compute_address.hasync_priv",
            "module.fgt_ha.google_compute_address.ilb",
            "module.fgt_ha.google_compute_address.int_priv",
            "module.fgt_ha.google_compute_address.mgmt_priv",
            "module.fgt_ha.google_compute_address.mgmt_pub",
            "module.fgt_ha.google_compute_disk.logdisk",
            "module.fgt_ha.google_compute_instance.fgt-vm",
            "module.fgt_ha.google_compute_instance_group.fgt-umigs",
            "module.fgt_ha.google_compute_region_health_check.health_check",
            "module.fgt_ha.random_string.api_key"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/forti-emea-se/global/routes/fgt-example-paygrt-default-via-fgt",
            "name": "fgt-example-paygrt-default-via-fgt",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-hasync",
            "next_hop_gateway": "",
            "next_hop_ilb": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/forwardingRules/fgt-example-paygfwdrule-ilb-euwest9",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "172.20.2.4",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 100,
            "project": "forti-emea-se",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/routes/fgt-example-paygrt-default-via-fgt",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_default_service_account.default",
            "module.fgt_ha.data.google_compute_image.fgt_image",
            "module.fgt_ha.data.google_compute_subnetwork.subnets",
            "module.fgt_ha.data.google_compute_zones.zones_in_region",
            "module.fgt_ha.google_compute_address.ext_priv",
            "module.fgt_ha.google_compute_address.frontends",
            "module.fgt_ha.google_compute_address.hasync_priv",
            "module.fgt_ha.google_compute_address.ilb",
            "module.fgt_ha.google_compute_address.int_priv",
            "module.fgt_ha.google_compute_address.mgmt_priv",
            "module.fgt_ha.google_compute_address.mgmt_pub",
            "module.fgt_ha.google_compute_disk.logdisk",
            "module.fgt_ha.google_compute_forwarding_rule.ilb_fwd_rule",
            "module.fgt_ha.google_compute_instance.fgt-vm",
            "module.fgt_ha.google_compute_instance_group.fgt-umigs",
            "module.fgt_ha.google_compute_region_backend_service.ilb_bes",
            "module.fgt_ha.google_compute_region_health_check.health_check",
            "module.fgt_ha.random_string.api_key"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-30T01:56:48.366-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/forti-emea-se/regions/europe-west9/routers/fgt-example-paygcr-cloudnat-euwest9",
            "name": "fgt-example-paygcr-cloudnat-euwest9",
            "network": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/global/networks/fgt-example-vpc-ext",
            "project": "forti-emea-se",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/routers/fgt-example-paygcr-cloudnat-euwest9"
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.fgt_ha",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "cloud_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "forti-emea-se/europe-west9/fgt-example-paygcr-cloudnat-euwest9/fgt-example-paygnat-cloudnat-euwest9",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "fgt-example-paygnat-cloudnat-euwest9",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "forti-emea-se",
            "region": "europe-west9",
            "router": "fgt-example-paygcr-cloudnat-euwest9",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/forti-emea-se/regions/europe-west9/subnetworks/fgt-example-sb-ext-euwest9",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.demo",
            "google_compute_subnetwork.demo",
            "module.fgt_ha.data.google_compute_subnetwork.subnets",
            "module.fgt_ha.google_compute_router.nat_router"
          ]
        }
      ]
    }
  ]
}